# backend/app/Validators/scouts/UpdateScoutValidator.ts
@@ -1,4 +1,4 @@
-import { schema, rules, CustomMessages } from '@ioc:Adonis/Core/Validator'
+import { schema, CustomMessages } from '@ioc:Adonis/Core/Validator'
 import type { HttpContextContract } from '@ioc:Adonis/Core/HttpContext'
 import { SPORTS } from 'App/Models/Scout'
 
@@ -11,7 +11,14 @@ export default class UpdateScoutValidator {
     name: schema.string.optional(),
     startedAt: schema.date.optional(),
     eventId: schema.number.optional(),
-    scoringSystemId: schema.number.optional()
+    scoringSystemId: schema.number.optional(),
+    scoutInfo: schema.object.optional().members({
+      general: schema.object().members({
+        opponent: schema.object.optional().members({
+          name: schema.string.optional()
+        })
+      })
+    })
   })
 
   public messages: CustomMessages = {}
